--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,12 @@
 CHANGELOG
 =========
 
-11/25/12: Versions 1.5.0
+24/10/16: Versions 1.5.1
+-------------------------
+ * Compatibily for php 5.6
+ * Added addOrderByField() (custom order by field) in Criteria.php for Propel
+
+01/27/16: Versions 1.5.0
 -------------------------
  * Fork on namespace Feries
  * Add composer support
